In development homepage message

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/dark.css'>
 
   <meta name="theme-color" content="#fafafa">
+
+  <title>Phalanx Fitness</title>
 </head>
 
 <body>
@@ -23,7 +26,15 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <div style="position: absolute; top: 50%; transform: translateY(-50%);">
+    <img src="img/logo.png" style="width: 5em; margin: 3em auto; display: block;">
+    <h1>Phalanx Fitness</h1>
+    <h4>The Intelligent Workout App</h4>
+    <br>
+    <p>Phalanx Fitness app is currently being developed and tested. For more information, email <a href="mailto:info@phalanxfitnessapp.com">info@phalanxfitnessapp.com</a></p>
+  </div>
+
+
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
